# Mental-Health-Analysis-using-Social-Media-Data

./: .gitignore  Feb-1-discussion-notes.md  Methods-and-datasets.md  README.md  data-cleaning.ipynb  data-sources-notes.md  lgbm_mental_health.onnx  logistic_mental_health.onnx  nb_mental_health.onnx  presentation-information.md  project_abstract.md  pyproject.toml  spacy_tfidf_classification.ipynb  stats_core_8.csv  submission-markdown.md
mentalhealth/: data_cleaning.py  data_preprocessing.py  data_visualization.py  model_training_testing.py
model/: logistic_mental_health.onnx  nb_mental_health.onnx
